<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item in the list of products -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D"  />

    <TextView
        android:id="@+id/label_dollar_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:text="@string/unit_product_dollars"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/price"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:text="@string/qty"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#AEB6BD"  />

    <Button
        android:id="@+id/sell_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="@string/sell"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#2B3D4D"/>
</LinearLayout>